Fixed: gravity force slider is broken
Added a friction tab to Ramp:Forces and Motion
# 1.03.76 (43868) Sep 8, 2010
Fixed: When paused and changing the angle of the ramp, vectors do not update
Fixed: FBD vector arrows don't originate at the origin, especially on resize of the FBD dialog
Fixed: Applied force vector doesn't update when the sim is paused
Changed to idiomatic scala setter from javabean style setter in Vector2DModel
Refactored MotionSeriesObject to use MutableDouble instead of immutable State
Fixed: vectors are incorrect on initialization
Refactored MotionSeriesObject model startup sequence
Performance improvement: skip expensive updates to VectorNode when possible
Refactored MotionSeriesObject to use explicit Vector2DModel paradigm instead of lazy computation paradigm
Merged ForceMotionSeriesObject into MotionSeriesObject
Performance improvement and minor refactoring in model
Removed colons after friction coefficients
Converted bouncy property to MutableBoolean
Converted frictionless property to MutableBoolean
Converted wall property to MutableBoolean
# 1.03.75 (43609) Aug 28, 2010
Temporarily reduced DT in order to test animation smoothness issues
Added experimental support for active rendering (commented out)
Changed "object stuck" timeout from 5 sec to 1 sec
# 1.03.74 (43417) Aug 23, 2010
Fixed: Object still hits walls sometimes, even when walls are minimized
Fixed: "F_Sum" label should always appear above the FSum vector arrow
Fixed: Icicles do not appear when turning friction coefficients down to zero
Removed unused code, Fixed memory leak
Fixed: Recorded acceleration doesn't update
Added non-editable text boxes (as in moving man) which read out a,v,x next to chart
Centralized stepListeners instead of using different notifications for playback vs record
Refactored model
Added screenshots
Moved vertical applied force slider closer to the chart
Fixed: When changing both mu_k and mu_s to zero, the ramp should turn to ice.