@@ -41,3 +41,4 @@ x-25.gif author=PhET
 mystery-box.png author=PhET
 #The website for raindrop is included here because it has = in the url: http://office.microsoft.com/clipart/preview.aspx?AssetID=MCj0432588&Query=raindrop&Scope=20&CTT=1&Origin=EC790000121033&QueryID=MJtFcQ-Ee&AssetCol=MPj0437368,MPj0438824,MPj0438857,MPj0438864,MPj0438348,MPj0433166,MCj0437640,MCj0411508,MPj0422988,MPj0423058,MCj0432588,MPj0430725
 raindrop.png source=microsoft notes=j0432588.png
+sound-icon.png author=PhET notes=taken from RPAL
