@@ -17,6 +17,9 @@ controls.no-friction = No Friction
 controls.lots-of-friction=Lots of Friction
 controls.return-object = Return Object
 
+audio.on = on
+audio.off = off
+
 walls.type = Walls
 walls.brick= Brick
 walls.bouncy= Bouncy
